rename to wellspring

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ggez-particle-system"
+name = "wellspring"
 version = "0.1.0"
 authors = ["Andrew Minnich <aminnich3@gmail.com>"]
 edition = "2018"
